feat: closeLastReceptionHandler done + swagger tags updated
