# internal/transport/rest/docs/swagger.json
@@ -18,7 +18,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Default"
+                    "Public"
                 ],
                 "summary": "Получение тестового токена",
                 "parameters": [
@@ -69,7 +69,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Default"
+                    "Public"
                 ],
                 "summary": "Авторизация пользователя",
                 "parameters": [
@@ -135,7 +135,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Default"
+                    "Protected"
                 ],
                 "summary": "Добавление товара в текущую приемку (только для сотрудников ПВЗ)",
                 "parameters": [
@@ -204,7 +204,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Default"
+                    "Protected"
                 ],
                 "summary": "Создание ПВЗ (только для модераторов)",
                 "parameters": [
@@ -258,6 +258,73 @@
                 }
             }
         },
+        "/pvz/{pvzId}/close_last_reception": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Закрывает последнюю открытую приемку для указанного ПВЗ (меняет статус на \"closed\")",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Protected"
+                ],
+                "summary": "Закрытие последней открытой приемки товаров в рамках ПВЗ (только для сотрудников ПВЗ)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID пункта выдачи заказов (ПВЗ)",
+                        "name": "pvzId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Приемка успешно закрыта",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.CloseLastReceptionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Некорректный путь запроса",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Доступ запрещен",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Не найдено открытой приемки для данного ПВЗ",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    },
+                    "405": {
+                        "description": "Метод не разрешен (разрешен только POST)",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/pvz/{pvzId}/delete_last_product": {
             "post": {
                 "security": [
@@ -267,7 +334,7 @@
                 ],
                 "description": "Удаляет самый последний добавленный товар (LIFO) (по дате) из открытой приемки указанного ПВЗ",
                 "tags": [
-                    "Default"
+                    "Protected"
                 ],
                 "summary": "Удаление последнего добавленного товара из текущей приемки (LIFO, только для сотрудников ПВЗ)",
                 "parameters": [
@@ -337,7 +404,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Default"
+                    "Protected"
                 ],
                 "summary": "Создание новой приемки товаров (только для сотрудников ПВЗ)",
                 "parameters": [
@@ -400,7 +467,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Default"
+                    "Public"
                 ],
                 "summary": "Регистрация пользователя",
                 "parameters": [
@@ -450,6 +517,27 @@
         }
     },
     "definitions": {
+        "handlers.CloseLastReceptionResponse": {
+            "type": "object",
+            "properties": {
+                "dateTime": {
+                    "type": "string",
+                    "example": "2025-07-17T12:15:49.386Z"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "3fa85f64-5717-4562-b3fc-2c963f66afa6"
+                },
+                "pvzId": {
+                    "type": "string",
+                    "example": "3fa85f64-5717-4562-b3fc-2c963f66afa6"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "close"
+                }
+            }
+        },
         "handlers.DummyLoginRequest": {
             "type": "object",
             "properties": {
